--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "chai": "^4.3.6",
     "ethers": "^5.7.1",
     "hardhat": "^2.11.2"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.7.3"
   }
 }
